# STARS

./: .gitignore  CMakeLists.txt  README.md  STARS  compail.sh  example_calling.sh  file_structure.txt
data/: exaple_network
docs/: threshold_sharing.md
src/: K_function.cpp  K_function.h  Library.h  Makefile  Network.cpp  Network.h  SP.cpp  main.cpp  sam_count.cpp  sam_count.h
